// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages view passenger types should render correctly when groups and individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and require proof documents of your passengers as well as passenger groups
          </p>
          <IndividualPassengerTypes
            passengerTypes={
              Array [
                Object {
                  "ageRangeMax": "16",
                  "ageRangeMin": "5",
                  "passengerType": "child",
                  "proofDocuments": Array [
                    "studentCard",
                  ],
                },
              ]
            }
          />
          <PassengerTypeGroups
            passengerTypeGroups={
              Array [
                Object {
                  "companions": Array [
                    Object {
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "maxNumber": "1",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
              ]
            }
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when no individual or group passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and require proof documents of your passengers as well as passenger groups
          </p>
          <NoIndividualPassengerTypes />
          <NoPassengerTypeGroups />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only individual passenger types 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and require proof documents of your passengers as well as passenger groups
          </p>
          <IndividualPassengerTypes
            passengerTypes={
              Array [
                Object {
                  "ageRangeMax": "16",
                  "ageRangeMin": "5",
                  "passengerType": "child",
                  "proofDocuments": Array [
                    "studentCard",
                  ],
                },
              ]
            }
          />
          <NoPassengerTypeGroups />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages view passenger types should render correctly when only passenger type groups 1`] = `
<BaseLayout
  description="View and edit your passenger types."
  showNavigation={true}
  title="Passenger types"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-third"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-two-thirds"
        >
          <h1
            className="govuk-heading-xl"
          >
            Passenger types
          </h1>
          <p
            className="govuk-body"
          >
            Define age range and require proof documents of your passengers as well as passenger groups
          </p>
          <NoIndividualPassengerTypes />
          <PassengerTypeGroups
            passengerTypeGroups={
              Array [
                Object {
                  "companions": Array [
                    Object {
                      "maxNumber": "2",
                      "passengerType": "adult",
                    },
                    Object {
                      "ageRangeMax": "16",
                      "ageRangeMin": "4",
                      "maxNumber": "1",
                      "passengerType": "child",
                      "proofDocuments": Array [
                        "studentCard",
                      ],
                    },
                  ],
                  "maxGroupSize": "3",
                  "name": "family group",
                },
              ]
            }
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;
